# Explainable-Rag-System

./: .dockerignore  .env.example  .gitignore  0.4.4  LICENSE  README.md  compose.yaml  dataProcessing.py  dataforge_pipeline_extracted.txt  dockerfile  entity_domainTest.py  entrypoint.sh  ingestionTest.py  main.py  pyproject.toml  requirements.txt  test_graph.py
.github/workflows/: python-app.yml
app/: main.py
app/api/: auth.py  dependencies.py  endpoints.py
app/api/routes/: auth.py  ingestion.py  llm_tools.py  rag.py
app/core/: config.py
app/db/: chroma_client.py
app/models/: schemas.py
app/pipeline/: chuncking.py  metadata.py  orchestrator.py  stage_1_ingestion.py  stage_2_decomposition.py  stage_3_retrieval.py  stage_4_local_graph.py  stage_5_generation.py  stage_6_scoring.py
app/static/: swagger-dark.css
app/utils/: audioIngestion.py  llm.py  visualizer.py
chroma/: persistant.py  testRetrival.py  testing.py
test/: chunckTest.py  conftest.py  dbTest.py  full_test.py  ingestionTest.py  test_audio_metadata.py  test_auth_guard.py  test_embed.py  test_extraction.py  test_graph.py  test_health.py  test_ingestion.py  test_integration_chroma.py  test_llm_online.py  test_pipeline.py  test_query.py  test_retrival.py  test_scoring.py  test_unit_core.py
